--- a/B4/index.html
+++ b/B4/index.html
@@ -325,7 +325,7 @@
                                     the new theme. Any suggestions on how to improve the code or other tidbits are much welcome. DM me on <a href="https://www.reddit.com/user/andreliverod" target="_blank">Reddit</a> or join our
                                     <a href="https://discord.aetherhub.com" target="_blank">Discord Server</a> and leave your feedback in the #aetherhub-chat channel.
                                 </p>
-                                <a href="https://aetherhub.github.io/b4/Theme.zip" class="btn btn-primary">Download this theme</a>
+                                <a href="https://aetherhub.github.io/B4/Theme.zip" class="btn btn-primary">Download this theme</a>
                             </div>
                         </div>
                         <div class="card mt-2">
