--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
               <img class="img-fluid" src="dl\Logo1Large.png">
               <br><br>
               <p class="card-text">Use the AetherHub, TeamAether or DeckHub logos on you webpage, channel or social media pages.</p>
-              <a href="dl\LogoPackage.zip" class="btn btn-primary">Download Logo Package</a>
+              <a href="dl\LogoPackage.zip" class="btn btn-primary"><b>Download Logo Package</b></a>
             </div>
           </div>
 
